--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     command: >
       sh -c "cd medical_project && python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+             gunicorn project_config.wsgi:application --bind 127.0.0.1:8000 --workers 3"
     volumes:
       - static_volume:/app/static
       - media_volume:/app/media
