--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
-DEBUG=False
+DEBUG=True
 SECRET_KEY=your-production-secret-key-change-this
 DATABASE_URL=postgres://medical_user:medical_password@db:5432/medical_db
-ALLOWED_HOSTS=localhost,127.0.0.1,medical-service.com
+ALLOWED_HOSTS=localhost,127.0.0.1
 
 # JWT настройки
 JWT_ACCESS_TOKEN_LIFETIME_DAYS=1
